<resources>
    <string name="app_name">Pizza</string>

    <string name="action_settings">Settings</string>
    <string name="pizza_button">Pizza</string>

    <string name="pizza_built"></string>

    <string name="pizza_name">Pizza Builder</string>
    <string name="toggle_on">red</string>
    <string name="toggle_off">white</string>
    <string name="warning_info">NOTE: Please only select thick crust, thin crust, or have no crust checked with the Gluten-Free switch set to ON in order to receive a proper suggestion for a pizza place!</string>

    <string name="warning_info2">NOTE: Please click "Pizza" button before clicking "Find Pizza" so that the app can refresh your preferences!</string>

    <string-array name="size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string name="crust_text">Crust</string>
    <string name="crust1_radio">thin</string>
    <string name="crust2_radio">thick</string>
    <string name="gluten_switch">Gluten-Free</string>
    <string name="pizzaFind">Find Pizza</string>
    <string name="hello_world"></string>
    <string name="title_activity_main_activity2">Title2</string>
    <string name="title_activity_main_activity3">Title3</string>

    <string name="suggest_pizza">This is your suggested pizza place</string>

</resources>
